--- a/ragas/pyproject.toml
+++ b/ragas/pyproject.toml
@@ -3,7 +3,7 @@ name = "ragas"
 requires-python = ">=3.9"
 dependencies = [
     "numpy",
-    "datasets",
+    "datasets<3.0",
     "tiktoken",
     "langchain",
     "langchain-core",
@@ -14,6 +14,13 @@ dependencies = [
     "pydantic>=2",
     "openai>1",
     "diskcache>=5.6.3",
+    "pillow>=10.4.0",
+    "python-dotenv>=1.1.1",
+    "gitpython>=3.1.45",
+    "instructor>=1.10.0",
+    "tqdm>=4.67.1",
+    "rich>=14.1.0",
+    "typer>=0.16.0",
 ]
 dynamic = ["version", "readme"]
 
