--- a/ragas/pyproject.toml
+++ b/ragas/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "rich>=14.1.0",
     "typer>=0.16.0",
+    "seaborn>=0.13.2",
 ]
 dynamic = ["version", "readme"]
 
